# idk-repo

./: .gitignore  Berksfile  Gemfile  NOTES.md  README.md  Rakefile  Thorfile  Vagrantfile  _rvmrc  do
.bundle/: config
.chef/plugins/knife/: do.rb
config/: dns.rb  foundation.rb  gems.rb  idk.rb  knife-secrets.rb  knife.rb  nanodoc.yml  rake.rb  solo.rb  tasks.rb  validator.pem  vendor.rb
config/bootstrap/: .gitignore  Rakefile  aclocal.m4  bootstrap.m4  bootstrap.sh.in  configure  configure.ac  dna.json.in  mkbootstrap.sh  solo.rb.in  solo.rb.in.src
config/bootstrap/chef-server/: .gitignore  bootstrap  bootstrap.ac  dna.json.in  solo.rb.in
config/certificates/: star.i.3ofcoins.net.crt
config/nanoc/: .gitignore  Rules  nanoc.yaml
config/nanoc/lib/: default.rb
config/ssl/: star.analyticsfire.com.crt  star.analyticsfire.com.pem  star.analyticsfire.com.sh  star_analyticsfire_com.chain.pem  star_analyticsfire_com.cnf  star_analyticsfire_com.csr  star_analyticsfire_com.json  star_analyticsfire_com.key
config/tarsnap/: headquarters.key  production.key  staging.key
cookbooks/af_databackend/: CHANGELOG.md  README.md  metadata.rb
cookbooks/af_databackend/attributes/: default.rb
cookbooks/af_databackend/files/default/: htpasswd
cookbooks/af_databackend/recipes/: default.rb
cookbooks/af_databackend/templates/default/: database.yml.erb  default-site.erb  nginx-site.erb  nginx.conf.erb  sv-afdatabackend-run.erb
cookbooks/jenkins-app/: CHANGELOG.md  README.md  metadata.rb
cookbooks/jenkins-app/attributes/: default.rb
cookbooks/jenkins-app/files/default/: backup.pl
cookbooks/jenkins-app/files/default/site-files/: README.chef
cookbooks/jenkins-app/recipes/: builder-perl.rb  builder-rvm.rb  builder.rb  default.rb  master.rb
cookbooks/jenkins-app/templates/default/: apache_jenkins.erb  jenkins.erb
cookbooks/scratch/: CHANGELOG.md  README.md  metadata.rb
cookbooks/scratch/recipes/: default.rb  node-headquarters.rb
data_bags/users/: maciej.json  marta.json  nick.json  piotr.json  tomasz.json
doc/: BOOTSTRAP.md  Makefile  conf.py  configuration.rst  getting_started.rst  index.rst  pieces.rst
doc/notes/: HOWTO.md  sdk.md
environments/: production.rb  staging.rb
lib/: foundation.rb
lib/config/: knife.rb
lib/foundation/: config.rb  core_ext.rb  vagrant_config.rb
lib/idk/: config.rb
lib/idk/config/: berks.rb  config.rb  core_ext.rb
lib/script/: chef-server-bootstrap.sh
lib/tasks/: bootstrap.thor  repo.thor  vm.thor
roles/: __base.rb  afdatabackend.rb  attributes.rb  base.rb  chef-server-bootstrap.rb  headquarters.rb
roles/base/: openssh.rb
script/: clone.sh
